--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -20,6 +20,7 @@ http {
       auth_basic "Restricted";
       auth_basic_user_file /etc/nginx/.htpasswd;
 
+      proxy_set_header X-Forwarded-Host $host;
       # Do not pass Authorization header to destination
       proxy_set_header Authorization "";
     }
