Target port number

--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -12,7 +12,7 @@ http {
   access_log /dev/stdout;
 
   server {
-    listen 80;
+    listen ##PORT##;
     server_name ##SERVER_NAME##;
 
     location / {
