--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -15,6 +15,8 @@ http {
     listen ##PORT##;
     server_name ##SERVER_NAME##;
 
+    include /etc/nginx/conf.d/*.conf;
+
     location / {
       proxy_pass ##PROXY_PASS##;
       auth_basic "Restricted";
