--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -15,6 +15,8 @@ http {
     listen ##PORT##;
     server_name ##SERVER_NAME##;
 
+    client_max_body_size ##CLIENT_MAX_BODY_SIZE##;
+
     include /etc/nginx/conf.d/*.conf;
 
     location / {
