Make proxy_read_timeout configuable

--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -16,6 +16,7 @@ http {
     server_name ##SERVER_NAME##;
 
     client_max_body_size ##CLIENT_MAX_BODY_SIZE##;
+    proxy_read_timeout ##PROXY_READ_TIMEOUT##;
 
     include /etc/nginx/conf.d/*.conf;
 
