Add :8090/nginx_status endpoint for monitoring

--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -30,4 +30,13 @@ http {
       proxy_set_header Authorization "";
     }
   }
+
+  server {
+    listen 8090;
+
+    location /nginx_status {
+      stub_status on;
+      access_log off;
+    }
+  }
 }
