--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -26,6 +26,7 @@ http {
       auth_basic_user_file /etc/nginx/.htpasswd;
 
       proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header X-Forwarded-Proto $scheme;
       # Do not pass Authorization header to destination
       proxy_set_header Authorization "";
     }
